--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "expo": "~51.0.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.10.5",
